<?xml version="1.0"?>
<package format="2">
  <name>oled_display_node</name>
  <version>1.1.1</version>
  <description>OLED I2C display node package</description>

  <maintainer email="mj@ubiquityrobotics.com">Mark Johnston</maintainer>

  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <build_depend>message_generation</build_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
  </export>
</package>
