<?xml version="1.0"?>
<package format="3">
  <name>oled_display_node</name>
  <version>1.1.1</version>
  <description>OLED I2C display node package</description>

  <maintainer email="mj@ubiquityrobotics.com">Mark Johnston</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>


  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>python3-colcon-common-extensions</depend>
  <depend>rclpy</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
